--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -20,66 +20,72 @@
     <h2 class="h1 mt-3 mb-4">Nos appartements stars</h2>
     <div class="row">
         <div class="col-md-4">
-            <div class="card bg-light mb-3"></div>
-            <div class="card-header text-center">
-                3 chambres, <strong>49&euro; / nuit</strong><br>
-                <small>Pas encore noté</small>
-            </div>
+            <div class="card bg-light mb-3 text-dark">
+                <div class="card-header text-center">
+                    3 chambres, <strong>49&euro; / nuit</strong><br>
+                    <small>Pas encore noté</small>
+                </div>
 
-            <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
-                style="height: 200px; width:100%; display:block;">
+                <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
+                    style="height: 200px; width:100%; display:block;">
 
-            <div class="card-body">
-                <h4 class="card-title">
-                    Appartement de ouf !
-                </h4>
-                <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima perspiciatis voluptas hic est
-                    itaque iste quod, laudantium pariatur saepe!
-                </p>
-                <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card bg-light mb-3"></div>
-            <div class="card-header text-center">
-                3 chambres, <strong>49&euro; / nuit</strong><br>
-                <small>Pas encore noté</small>
-            </div>
-
-            <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
-                style="height: 200px; width:100%; display:block;">
-
-            <div class="card-body">
-                <h4 class="card-title">
-                    Appartement de ouf !
-                </h4>
-                <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima perspiciatis voluptas hic est
-                    itaque iste quod, laudantium pariatur saepe!
-                </p>
-                <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        Appartement de ouf !
+                    </h4>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima perspiciatis voluptas hic
+                        est
+                        itaque iste quod, laudantium pariatur saepe!
+                    </p>
+                    <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-light mb-3"></div>
-            <div class="card-header text-center">
-                3 chambres, <strong>49&euro; / nuit</strong><br>
-                <small>Pas encore noté</small>
+            <div class="card bg-light mb-3 text-dark">
+                <div class="card-header text-center">
+                    3 chambres, <strong>49&euro; / nuit</strong><br>
+                    <small>Pas encore noté</small>
+                </div>
+
+                <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
+                    style="height: 200px; width:100%; display:block;">
+
+                <div class="card-body">
+                    <h4 class="card-title">
+                        Appartement de ouf !
+                    </h4>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima perspiciatis voluptas hic
+                        est
+                        itaque iste quod, laudantium pariatur saepe!
+                    </p>
+                    <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                </div>
             </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card bg-light mb-3 text-dark">
+                <div class="card-header text-center">
+                    3 chambres, <strong>49&euro; / nuit</strong><br>
+                    <small>Pas encore noté</small>
+                </div>
 
-            <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
-                style="height: 200px; width:100%; display:block;">
+                <img src="http://placehold.it/1000x400" alt="Image de l'appartement"
+                    style="height: 200px; width:100%; display:block;">
 
-            <div class="card-body">
-                <h4 class="card-title">
-                    Appartement de ouf !
-                </h4>
-                <p class="card-text">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima perspiciatis voluptas hic est
-                    itaque iste quod, laudantium pariatur saepe!
-                </p>
-                <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        Appartement de ouf !
+                    </h4>
+                    <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga minima perspiciatis voluptas hic
+                        est
+                        itaque iste quod, laudantium pariatur saepe!
+                    </p>
+                    <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                </div>
             </div>
         </div>
     </div>
