--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -20,6 +20,9 @@
                 {{ ad.introduction }}
             </p>
             <a href="{{ url }}" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+            {% if app.user and app.user == ad.author %}    
+            <a href="{{ path('ad_edit',{'slug': ad.slug }) }}" class="btn btn-secondary">Modifier l'annonce</a>
+            {% endif %}
         </div>
     </div>
 </div>
