--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -11,10 +11,10 @@
         <p class="h2">
             <strong>{{ ad.rooms }} chambres</strong> pour <strong>{{ ad.price }}&euro;</strong> par nuit
         </p>
-        <a href="#" class="btn btn-primary">Réserver</a>
+        <a href="{{ path('booking_create',{'slug': ad.slug }) }}" class="btn btn-primary">Réserver</a>
         {% if app.user and app.user == ad.author %}    
         <a href="{{ path('ad_edit',{'slug': ad.slug }) }}" class="btn btn-secondary">Modifier l'annonce</a>
-        <a href="{{ path('ad_delete',{'slug': ad.slug}) }}" class="btn btn-danger" onclick="return confirm(`Voulez-vous supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
+        <a href="{{ path('ad_delete',{'slug': ad.slug }) }}" class="btn btn-danger" onclick="return confirm(`Voulez-vous supprimer l'annonce : {{ ad.title }} ?`)">Supprimer l'annonce</a>
         {% endif %}
     </div>
 </div>
