Gestion des reservations (fin) + Avis utilisateurs

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -35,3 +35,7 @@ div.carousel-caption {
 .datepicker table tr td.disabled:hover{
     color: gray !important;
 }
+
+span.rating i{
+    color: #DF691A;
+}
