--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -51,7 +51,38 @@
                     <span class="sr-only">Next</span>
                 </a>
             </div>
+            <hr>
+            {% if ad.comments|length > 0 %}
+                <h2 class="mb-3">Commentaires de nos voyageurs :</h2>
 
+                <div class="alert alert-info">
+                    <h4 class="alert-heading text-center">
+                        <div class="row align-items-center">
+                            <div class="col">
+                                Note globale donnée par nos voyageurs
+                            </div>
+                            <div class="col">
+                                {% include "partials/rating.html.twig" with {'rating': ad.avgRatings} %}
+                                <br>
+                                <small>(Calculée sur {{ ad.comments|length }} avis)</small>
+                            </div>
+                        </div>
+                    </h4>
+                </div>
+                {% for comment in ad.comments %}
+                    <div class="bg-dark rounded mb-3 p-3">
+                        Commentaire de <strong>{{ comment.author.firstname }} {{ comment.author.lastname | first | upper }}.</strong> :
+                        <blockquote>
+                            {{ comment.content }}
+                        </blockquote> 
+                        Noté donnée : 
+                        {% include "partials/rating.html.twig" with {'rating': comment.rating} %}
+                    </div>
+                {% endfor %}
+            {% else %}
+                <h2>Cette annonce n'a pas encore reçu de commentaires</h2>
+            {% endif %}
+            
         </div>
         <div class="col">
             {% set a = ad.author %}
