--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -48,7 +48,7 @@
                         <dt class="col-md-4">Montant total</dt>
                         <dd class="col-md-8">{{ booking.amount }} &euro;</dd>
                         <dt class="col-md-4">Commentaire</dt>
-                        <dd class="col-md-8">{{ booking.comment }}</dd>
+                        <dd class="col-md-8">{{ booking.comment | default('aucun commentaire') }}</dd>
                     </dl>
 
                     <hr>
@@ -73,6 +73,27 @@
                     <a href="{{ path('user_show',{'slug': author.slug}) }}" class="btn btn-primary">
                         Plus d'info sur {{ author.firstname }}
                     </a>
+                </div>
+
+                <div class="alert alert-dark" id="comment">
+                    <h2 class="alert-heading">Votre avis :</h2>
+                    {% if date() > date(booking.endDate) %}
+                        {% set comment = booking.ad.commentFromAuthor(app.user) %}
+                        {% if comment is not null %}
+                            <blockquote>
+                                {{ comment.content }}
+                            </blockquote>
+                            <strong>Note : </strong> {% include "partials/rating.html.twig" with {'rating': comment.rating} %}
+                        {% else %}
+                            {{ form_start(form) }}
+                            {{ form_widget(form) }}
+                            <button type="submit" class="btn btn-primary">Valider</button>
+                            {{ form_end(form) }}
+                        {% endif %}
+                    {% else %}
+                        <p>Vous devez attendre la fin du voyage pour mettre un avis</p>
+                    {% endif %}
+                    
                 </div>
             </div>
             <div class="col">
