--- a/templates/account/bookings.html.twig
+++ b/templates/account/bookings.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="container">
-        <h1>Mes réservations</h1>
+        <h1 class="my-5">Mes réservations</h1>
         <div class="alert alert-info mt-5">
             <p>Retrouvez toutes vos réservations</p>
         </div>
@@ -13,7 +13,7 @@
         {% for booking in app.user.bookings %}
             {% set ad = booking.ad %}
             <div class="row mt-5">
-                <div class="col-4">
+                <div class="col-md-4">
                     <img src="{{ ad.coverimage }}" alt="Photo de l'annonce {{ booking.ad.title }}" class="img-fluid">
                     <div class="mt-3">
                         {% set comment = ad.commentFromAuthor(app.user) %}
@@ -25,12 +25,12 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="col-8">
+                <div class="col-md-8">
                     <h4>{{ ad.title }}</h4>
                     <p>
                         Réservation <strong>n° {{ booking.id }}</strong><br>
                         Du {{ booking.startDate | date('d/m/Y') }} au {{ booking.endDate | date('d/m/Y') }}
-                        {{ booking.amount }} &euro;
+                        {{ booking.amount | number_format(2, "," , " ") }} &euro;
                     </p>
                     <a href="{{ path('booking_show', {'id': booking.id}) }}" class="btn btn-info">Voir plus d'information</a>
                 </div>
