--- a/templates/account/profile.html.twig
+++ b/templates/account/profile.html.twig
@@ -5,11 +5,39 @@
 {% block body %}
 
     <div class="container">
-        <h1>Modification du profil</h1>
+        <h1 class="my-5">Modification du profil</h1>
 
         {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button type="submit" class="btn btn-primary">Enregistrer les modifications</button>
+
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-dark">
+                    <h2 class="alert-heading">Informations générales</h2>
+                    <hr>
+                    {{ form_row(form.firstname) }}
+                    {{ form_row(form.lastname) }}
+                    {{ form_row(form.email) }}
+                    {{ form_row(form.picture) }}
+                </div>
+            </div>
+            <div class="col">
+                <div class="alert alert-dark">
+                    <h2 class="alert-heading">Détails</h2>
+                    <hr>
+                    {{ form_row(form.introduction) }}
+                    {{ form_row(form.description) }}
+
+                    <hr>
+
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-check"></i>
+                        Enregistrer les modifications
+                    </button>
+                    
+                </div>
+            </div>
+        </div>
+
         {{ form_end(form) }}
 
     </div>
