--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -34,7 +34,7 @@
                 {% endfor %}
             </div>
         {% else %}
-            <div class="alert alert-warning">
+            <div class="alert alert-info">
                 <p>
                     <strong>{{ user.fullname }} </strong> n'a pas encore d'annonce
                 </p>
