--- a/templates/account/login.html.twig
+++ b/templates/account/login.html.twig
@@ -8,8 +8,8 @@
     <div class="row">
         <div class="col-md-3"></div>
         <div class="col-md-6">
-            <div class="bg-dark p-3">
-                <h1>Connectez-vous</h1>
+        <h1 class="mb-4">Connectez-vous</h1>
+            <div class="p-3 shadow clearfix">
 
                 {% if hasError %}
                     <div class="alert alert-danger">
@@ -17,7 +17,6 @@
                     </div>
                 {% endif %}
                 
-
                 <form action="{{ path('account_login') }}" method="post">
                     <div class="form-group">
                         <label for="email">Email</label>
@@ -28,7 +27,7 @@
                         <input type="password" name="_password" id="password" class="form-control" placeholder="Mot de passe ..." required>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Se connecter</button>
+                        <button type="submit" class="btn btn-primary float-right">Se connecter</button>
                     </div>
                 </form>
             </div>
