--- a/templates/account/profile.html.twig
+++ b/templates/account/profile.html.twig
@@ -11,17 +11,17 @@
 
         <div class="row">
             <div class="col">
-                <div class="alert alert-dark">
+                <div class="alert alert-light">
                     <h2 class="alert-heading">Informations générales</h2>
                     <hr>
-                    {{ form_row(form.firstname) }}
-                    {{ form_row(form.lastname) }}
+                    {{ form_row(form.firstName) }}
+                    {{ form_row(form.lastName) }}
                     {{ form_row(form.email) }}
                     {{ form_row(form.picture) }}
                 </div>
             </div>
             <div class="col">
-                <div class="alert alert-dark">
+                <div class="alert alert-light">
                     <h2 class="alert-heading">Détails</h2>
                     <hr>
                     {{ form_row(form.introduction) }}
