--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -55,7 +55,7 @@
             {% if ad.comments|length > 0 %}
                 <h2 class="mb-3">Commentaires de nos voyageurs :</h2>
 
-                <div class="alert alert-info">
+                <div class="alert alert-primary">
                     <h4 class="alert-heading text-center">
                         <div class="row align-items-center">
                             <div class="col">
@@ -70,7 +70,7 @@
                     </h4>
                 </div>
                 {% for comment in ad.comments %}
-                    <div class="bg-dark rounded mb-3 p-3">
+                    <div class="bg-light rounded mb-3 p-3">
                         Commentaire de <strong>{{ comment.author.firstname }} {{ comment.author.lastname | first | upper }}.</strong> :
                         <blockquote>
                             {{ comment.content }}
