--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -13,7 +13,7 @@
         <p>Vous êtes sur le point de réserver le bien de <strong>{{ ad.author.fullname }}</strong></p>
         
         {{ form_start(form) }}
-        <div class="alert alert-dark">
+        <div class="alert alert-light">
             <h2 class="h4">Quelles sont les dates qui vous intéressent ?</h2>
             <div class="row">
                 <div class="col">
