--- a/templates/booking/show.html.twig
+++ b/templates/booking/show.html.twig
@@ -34,7 +34,7 @@
 
         <div class="row">
             <div class="col">
-                <div class="alert alert-dark">
+                <div class="alert alert-light">
                     <h2>Détails</h2>
                     <dl class="row">
                         <dt class="col-md-4">Numéro</dt>
@@ -75,7 +75,7 @@
                     </a>
                 </div>
 
-                <div class="alert alert-dark" id="comment">
+                <div class="alert alert-light" id="comment">
                     <h2 class="alert-heading">Votre avis :</h2>
                     {% if date() > date(booking.endDate) %}
                         {% set comment = booking.ad.commentFromAuthor(app.user) %}
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="col">
-                <div class="alert alert-dark">
+                <div class="alert alert-light">
                     <h2 class="alert-heading">Votre hébergement</h2>
 
                     <h4>
