--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <div class="container">
-    <div class="jumbotron mt-3">
+    <div class="jumbotron shadow mt-3">
         <h1 class="display-3">Bienvenue sur SymBNB !</h1>
         <p class="lead">
             Nous mettons en relation les voyageurs et les propriétaires qui veulent profiter d'opportunités
@@ -20,8 +20,8 @@
     <h2 class="h1 my-5">Nos appartements stars</h2>
     <div class="row">
         <div class="col-md-4">
-            <div class="card bg-light mb-3 text-dark">
-                <div class="card-header text-center">
+            <div class="card shadow bg-light mb-3 text-dark">
+                <div class="card-header bg-primary text-center">
                     3 chambres, <strong>49&euro; / nuit</strong><br>
                     <small>Pas encore noté</small>
                 </div>
@@ -38,13 +38,13 @@
                         est
                         itaque iste quod, laudantium pariatur saepe!
                     </p>
-                    <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                    <a href="#" class="btn btn-outline-primary">En savoir plus sur l'annonce</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-light mb-3 text-dark">
-                <div class="card-header text-center">
+            <div class="card shadow bg-light mb-3 text-dark">
+                <div class="card-header bg-primary text-center">
                     3 chambres, <strong>49&euro; / nuit</strong><br>
                     <small>Pas encore noté</small>
                 </div>
@@ -61,13 +61,13 @@
                         est
                         itaque iste quod, laudantium pariatur saepe!
                     </p>
-                    <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                    <a href="#" class="btn btn-outline-primary">En savoir plus sur l'annonce</a>
                 </div>
             </div>
         </div>
         <div class="col-md-4">
-            <div class="card bg-light mb-3 text-dark">
-                <div class="card-header text-center">
+            <div class="card shadow bg-light mb-3 text-dark">
+                <div class="card-header bg-primary text-center">
                     3 chambres, <strong>49&euro; / nuit</strong><br>
                     <small>Pas encore noté</small>
                 </div>
@@ -84,7 +84,7 @@
                         est
                         itaque iste quod, laudantium pariatur saepe!
                     </p>
-                    <a href="#" class="btn btn-secondary">En savoir plus sur l'annonce</a>
+                    <a href="#" class="btn btn-outline-primary">En savoir plus sur l'annonce</a>
                 </div>
             </div>
         </div>
@@ -93,7 +93,7 @@
     <h2 class="h1 my-5">Nos propriétaires stars</h2>
     <div class="row">
         <div class="col">
-            <div class="card border-secondary mb-3">
+            <div class="card shadow mb-3">
                 <div class="card-body">
                     <h4 class="card-title">Teddy Couaillier</h4>
                     <hr>
@@ -102,13 +102,13 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quaerat?
                         </p>
-                        <a href="#" class="btn btn-success float-right">En savoir plus</a>
+                        <a href="#" class="btn btn-info float-right">En savoir plus</a>
                     </div>
                 </div>
             </div>
         </div>
         <div class="col">
-            <div class="card border-secondary mb-3">
+            <div class="card shadow mb-3">
                 <div class="card-body">
                     <h4 class="card-title">Teddy Couaillier</h4>
                     <hr>
@@ -117,7 +117,7 @@
                         <p>
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, quaerat?
                         </p>
-                        <a href="#" class="btn btn-success float-right">En savoir plus</a>
+                        <a href="#" class="btn btn-info float-right">En savoir plus</a>
                     </div>
                 </div>
             </div>
