--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,3 +1,3 @@
-<footer class="mt-5 bg-dark py-5 text-center">
+<footer class="mt-5 bg-dark text-light py-5 text-center">
     <p class="m-0">Copyright SymBNB </p>
 </footer>
