--- a/templates/booking/book.html.twig
+++ b/templates/booking/book.html.twig
@@ -13,7 +13,7 @@
         <p>Vous êtes sur le point de réserver le bien de <strong>{{ ad.author.fullname }}</strong></p>
         
         {{ form_start(form) }}
-        <div class="alert alert-light">
+        <div class="alert alert-primary shadow">
             <h2 class="h4">Quelles sont les dates qui vous intéressent ?</h2>
             <div class="row">
                 <div class="col">
@@ -23,8 +23,8 @@
                     {{ form_row(form.endDate) }}
                 </div>
             </div>
-            <h4 class="mt-2">Montant du séjour : <span id="amount">...</span> &euro;</h4>
-            <span id="days">0</span> nuit(s) à {{ ad.price | number_format(2, "," , " ") }} &euro; par nuit
+            <h4 class="mt-2">Montant du séjour : <strong class="text-info"><span id="amount">...</span> &euro;</strong></h4>
+            <span id="days">0</span> nuit(s) à <strong class="text-info">{{ ad.price | number_format(2, "," , " ") }} &euro;</strong> par nuit
 
             <h4 class="mt-3">Vous avez un commentaire ?</h4>
             {{ form_row(form.comment) }}
