--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -46,7 +46,7 @@
 
 {% for label, messages in app.flashes %}
 <div class="container">
-    <div class="alert alert-{{ label }}">
+    <div class="alert alert-{{ label }} pb-0">
         {% for message in messages %}
         <p>{{ message | raw}}</p>
         {% endfor %}
