--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -35,10 +35,10 @@
                         <span class="badge badge-primary rounded">{{ ad.avgRatings | number_format(1,","," ") }}</span>
                     </td>
                     <td>
-                        <a href="#" class="btn btn-primary">
-                            <i class="fas fa-edit"></i>
+                        <a href="{{ path('admin_ad_edit',{'id': ad.id}) }}" class="btn btn-info mb-1">
+                            <i class="fas fa-pen"></i>
                         </a>
-                        <a href="#" class="btn btn-danger">
+                        <a href="{{ path('admin_ad_delete',{'id': ad.id}) }}" class="btn btn-danger mb-1">
                             <i class="fas fa-trash"></i>
                         </a>
                     </td>
