--- a/templates/admin/partials/header.html.twig
+++ b/templates/admin/partials/header.html.twig
@@ -54,7 +54,7 @@
                 </a>
 
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledBy="#accountDropdownLink">
-                   <a href="{{ path('account_logout') }}" class="dropdown-item">Déconnexion</a>
+                   <a href="{{ path('admin_account_logout') }}" class="dropdown-item">Déconnexion</a>
                 </div>
             </li>
             {% endif %}
