--- a/templates/admin/ad/index.html.twig
+++ b/templates/admin/ad/index.html.twig
@@ -20,7 +20,7 @@
             </thead>
 
             <tbody>
-                {% for ad in ads %}
+                {% for ad in pagination.data %}
                 <tr>
                     <td>{{ ad.id }}</td>
                     <td>{{ ad.title }}</td>
@@ -46,6 +46,8 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        {{ pagination.display() }}
     </div>
 
 {% endblock %}
