--- a/templates/admin/booking/index.html.twig
+++ b/templates/admin/booking/index.html.twig
@@ -20,7 +20,7 @@
             </thead>
 
             <tbody>
-                {% for booking in bookings %}
+                {% for booking in pagination.data %}
                 <tr>
                     <td>{{ booking.id }}</td>
                     <td>{{ booking.createdAt | date('m/d/Y H:i') }}</td>
@@ -46,6 +46,9 @@
                 {% endfor %}
             </tbody>
         </table>
+
+        {{ pagination.display() }}
+    
     </div>
 
 {% endblock %}
