--- a/templates/admin/dashboard/index.html.twig
+++ b/templates/admin/dashboard/index.html.twig
@@ -14,7 +14,7 @@
                                 <i class="fas fa-users fa-3x"></i>
                             </div>
                             <div class="col-8">
-                                <h4 class="card-title">100 utilisateurs inscrits</h4>
+                                <h4 class="card-title">{{ stats.users }} utilisateurs inscrits</h4>
                             </div>
                         </div>
                     </div>
@@ -28,7 +28,7 @@
                                 <i class="fas fa-hotel fa-3x"></i>
                             </div>
                             <div class="col-8">
-                                <h4 class="card-title">50 annonces postées</h4>
+                                <h4 class="card-title">{{ stats.ads }} annonces postées</h4>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                                 <i class="fas fa-folder fa-3x"></i>
                             </div>
                             <div class="col-8">
-                                <h4 class="card-title">100 réservations</h4>
+                                <h4 class="card-title">{{ stats.bookings }} réservations</h4>
                             </div>
                         </div>
                     </div>
@@ -56,10 +56,83 @@
                                 <i class="fas fa-comments fa-3x"></i>
                             </div>
                             <div class="col-8">
-                                <h4 class="card-title">250 avis</h4>
+                                <h4 class="card-title">{{ stats.comments }} avis</h4>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col">
+                <div class="alert alert-success">
+                    <h2 class="alert-heading my-3">
+                        <i class="fas fa-arrow-up"></i>
+                        Les annonces populaires
+                    </h2>
+
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Annonce</th>
+                                <th>Propriétaire</th>
+                                <th>Moyenne</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for ad in bestAds %}
+                            <tr>
+                                <td>{{ ad.title }}</td>
+                                <td>
+                                    <img src="{{ ad.picture }}" alt="" class="avatar avatar-micro">
+                                    {{ ad.firstName }}  {{ ad.lastName }}
+                                </td>
+                                <td class="text-center">
+                                    <span class="badge badge-dark">
+                                        {{ ad.note | number_format(1,","," ") }}
+                                    </span>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col">
+                <div class="alert alert-danger">
+                    <h2 class="alert-heading my-3">
+                        <i class="fas fa-down-up"></i>
+                        Les pires annonces
+                    </h2>
+
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Annonce</th>
+                                <th>Propriétaire</th>
+                                <th>Moyenne</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for ad in worstAds %}
+                            <tr>
+                                <td>{{ ad.title }}</td>
+                                <td>
+                                    <img src="{{ ad.picture }}" alt="" class="avatar avatar-micro">
+                                    {{ ad.firstName }}  {{ ad.lastName }}
+                                </td>
+                                <td class="text-center">
+                                    <span class="badge badge-dark">
+                                        {{ ad.note | number_format(1,","," ") }}
+                                    </span>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
