Mise en place de Encore

--- a/templates/ad/edit.html.twig
+++ b/templates/ad/edit.html.twig
@@ -21,6 +21,6 @@
 
 {% block javascripts %}
 
-<script src="/js/ad.js"></script>
+<script src="{{ asset('build/js/ad.js') }}"></script>
 
 {% endblock %}
