--- a/templates/admin/account/login.html.twig
+++ b/templates/admin/account/login.html.twig
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Connexion à l'administration</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css'/>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{ asset('build/css/app.css') }}">
 </head>
 <body>
     <div class="col-md-4 mx-auto mt-5">
