Change title bookings

--- a/templates/account/bookings.html.twig
+++ b/templates/account/bookings.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}Liste de vos réservations{% endblock %}
+{% block title %}Liste des réservations{% endblock %}
 
 {% block body %}
 
